Work/ITclub/1/backup/v0.0.0/RULE.md
# 项目设计规范与约束

> 本文档定义了项目的核心设计要求、视觉规范与技术约束，确保整体体验的一致性与专业性。

## 一、视觉设计规范

### 1.1 设计哲学

**核心理念**：科技美学与教学功能的融合
- 营造沉浸式的算法学习氛围
- 通过视觉层次引导学习流程
- 平衡专业性与易用性

### 1.2 色彩系统

**主色调**：科技蓝渐变
- 主色：`#2962ff` - 专业、可信
- 深色：`#1e4de7` - 强调与深度
- 浅色：`#5c9dff` - 高亮与聚焦

**功能色彩**：
- 成功色：`#00c853` - 正向反馈
- 警示色：`#ffab00` - 注意事项
- 错误色：`#ff5252` - 问题标识

**文本层级**：
- 主文本：`#ffffff` - 主要内容
- 次文本：`#e0e7ff` - 辅助信息
- 弱文本：`#b8c2ff` - 说明文字
- 高亮：`#5c9dff` - 关键词强调

### 1.3 毛玻璃效果规范

**材质定义**：
```css
--glass-bg: rgba(255, 255, 255, 0.08);           /* 基础透明度 */
--glass-border: 1px solid rgba(255, 255, 255, 0.1); /* 边框透明度 */
--glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);  /* 悬浮阴影 */
--glass-blur: blur(12px);                       /* 高斯模糊强度 */
```

**应用场景**：
- 所有卡片式内容容器（问题卡、算法步骤、人物介绍等）
- 导航栏与工具栏背景
- 模态对话框与浮动面板
- 可视化控制区域

**实现要求**：
- 必须配合 `backdrop-filter` 使用
- 层级间透明度需有差异（0.08、0.06、0.04）
- 边框需使用半透明描边强化边缘

### 1.4 卡片化设计

**卡片结构**：
- **容器**：应用毛玻璃效果，圆角 `10px-14px`
- **边距**：卡片间间距 `20px-24px`
- **内边距**：内容区域 `16px-24px`
- **边框**：左侧强调边（如错误卡片左侧红色边）

**阴影系统**：
```css
--shadow-light: 0 4px 20px rgba(41, 98, 255, 0.15);
--shadow-medium: 0 8px 32px rgba(41, 98, 255, 0.25);
--shadow-heavy: 0 12px 48px rgba(41, 98, 255, 0.35);
```

**悬浮感营造**：
- 阴影从卡片底部投射
- 阴影颜色使用主题色（蓝色）而非纯黑
- 不同层级使用不同阴影强度

### 1.5 排版规范

**字体系统**：
- 主字体：`Segoe UI`, `Tahoma`, `Geneva`, `Verdana`, sans-serif
- 等宽字体：`Courier New`, `Courier`, monospace（用于公式）
- 基础字号：`14px`（针对16:9屏幕优化）

**标题层级**：
- H1（模块标题）：`2.2rem`，主色
- H2（章节标题）：`1.8rem`，强调色
- H3（小节标题）：`1.6rem`，辅色
- H4（卡片标题）：`1.3rem`

**行高与间距**：
- 正文行高：`1.6`
- 标题行高：`1.3-1.4`
- 段落间距：`16px-20px`

## 二、布局与尺寸约束

### 2.1 屏幕比例与适配

**强制要求**：16:9 宽高比
- 设计基准分辨率：`1920×1080`
- 最小支持宽度：`1366px`
- 全屏模式，无横向滚动
- 纵向内容溢出处理：隐藏而非滚动

**容器策略**：
```cssnhtml, body {
  overflow: hidden;  /* 严格禁止滚动 */
  height: 100%;      /* 全屏高度 */
}
```

### 2.2 内容区域划分

**顶部导航区**：
- 高度：`80px`
- 固定定位，始终可见
- 包含：品牌标识、模块导航、进度指示、控制按钮

**主内容区**：
- 高度：`calc(100vh - 80px)`
- 采用模块切换机制（非滚动）
- 每个模块内部可使用页签切换子内容

**侧边导航**：
- 右侧垂直页签导航
- 宽度：`60px`
- 用于模块内的页面切换

### 2.3 响应式约束

**严格限制**：
- 不支持移动端适配（专注桌面演示场景）
- 最小宽度锁定为 `1366px`
- 高度固定为 `768px`（兼容720p投影）
- 内容溢出策略：
  - 水平溢出：隐藏
  - 垂直溢出：隐藏（非滚动）
  - 必要时使用内部滚动（如代码块）

## 三、交互设计规范

### 3.1 导航交互

**模块切换**：
- 顶部导航栏点击切换
- 键盘方向键支持（← →）
- 平滑过渡动画（300ms ease）

**页面切换**：
- 右侧页签按钮
- 垂直方向键支持（↑ ↓）
- 上下页控制按钮

**进度反馈**：
- 顶部进度条实时更新
- 当前模块/总模块数显示
- 页签指示器（圆点状态）

### 3.2 可视化交互

**Canvas区域**：
- 悬停时显示工具提示
- 参数滑块实时响应（≤100ms延迟）
- 重新生成按钮带动画反馈

**控制元素**：
- 按钮：悬停上浮 `2px`，阴影加深
- 滑块：拖拽时显示数值标签
- 下拉菜单：毛玻璃下拉列表

### 3.3 动画规范

**过渡时长**：
- 快速：`0.2s`（悬停效果）
- 标准：`0.3s`（页面切换）
- 缓慢：`0.5s`（模块切换）

**缓动函数**：
- 标准：`ease`（默认）
- 进入：`cubic-bezier(0.4, 0, 0.2, 1)`（模块切换）
- 退出：`cubic-bezier(0.0, 0, 0.2, 1)`（弹窗关闭）

## 四、技术实现约束

### 4.1 浏览器支持

**必须支持**：
- `backdrop-filter`（毛玻璃核心）
- `CSS Grid` 和 `Flexbox`
- `Canvas 2D API`
- `ES6+` 语法

**降级策略**：
- 不支持 `backdrop-filter` 的浏览器显示纯色背景
- 使用 `@supports` 查询进行特性检测

### 4.2 性能要求

**渲染性能**：
- Canvas动画目标帧率：`60 FPS`
- 参数调节响应时间：`< 100ms`
- 模块切换时间：`< 300ms`

**资源优化**：
- 图片资源使用WebP格式（如需要）
- JavaScript代码分割（按模块加载）
- CSS关键路径优化（内联首屏样式）

### 4.3 代码规范

**文件组织**：
- HTML：语义化标签，模块化结构
- CSS：BEM命名规范，CSS变量驱动
- JavaScript：模块化架构，事件驱动

**命名约定**：
- 类名：`kebab-case`（如 `nav-btn`）
- ID：`camelCase`（如 `currentModule`）
- 变量：`camelCase`（如 `progressFill`）

### 4.4 日志记录规范

**强制要求**：所有代码修改必须记录到 `Log.log` 文件

**日志文件位置**：项目根目录 `/Log.log`

**日志格式标准**：
```
================================================================================
修改时间: YYYY-MM-DD HH:MM:SS (北京时间)
修改类型: [新增|修改|删除|优化]
修改文件: 完整的相对路径（如：index.html, css/components.css）
修改位置: 具体位置描述（如：模块2第一页 - 时间轴区域）
修改内容: 
  - 详细描述修改了哪些内容
  - 使用项目符号列出具体改动点
  - 如有参数调整，注明旧值和新值
  - 如有UI变更，描述变更前后的视觉效果
修改原因: 为什么要做这个修改（关联需求或问题）
相关任务: 任务ID或任务描述
验证状态: [未验证|已验证|部分验证]
验证结果: 验证的具体结果（如：时间轴显示正常，未超过屏幕高度）
修改人: WorkBuddy AI Assistant
================================================================================
```

**日志记录原则**：
- **只追加不删除**：所有历史记录永久保留
- **实时记录**：修改完成后立即写入日志
- **详细完整**：确保修改可追溯、可复现
- **任务关联**：每条日志必须关联到具体任务
- **验证必填**：记录修改后的验证结果

**日志写入示例**：
```
================================================================================
修改时间: 2025-03-15 14:30:25
修改类型: 修改
修改文件: css/components.css
修改位置: 模块2第一页 - 时间轴样式
修改内容: 
  - 将横向时间轴改为竖向时间轴设计
  - 添加左侧时间轴线（3px宽，渐变蓝色）
  - 时间标记显示在轴线左侧（absolute定位，left: -56px）
  - 事件卡片添加毛玻璃效果（glass-bg, backdrop-filter）
  - 每个事件项添加圆形标记（14px直径，主色填充）
  - 调整间距：padding-left: 60px，事件间距margin-bottom: 16px
  - 事件卡片最大宽度限制为220px，防止超出屏幕
修改原因: 用户反馈横向时间轴不够美观，要求改为竖向设计，时间轴靠近左侧，时间在轴上的点中，对应时间的右侧是对应事件
相关任务: 模块2第一页：将时间轴改为竖向设计
验证状态: 已验证
验证结果: 在1920x1080分辨率下测试，时间轴完整显示，所有事件卡片可见，未出现垂直滚动条，符合16:9比例要求
修改人: WorkBuddy AI Assistant
================================================================================
```

**自动化要求**：
- 每次调用 `replace_in_file` 或 `write_to_file` 后必须记录日志
- 日志写入使用 `write_to_file` 工具，设置 `append: true` 模式
- 修改人字段统一使用 "WorkBuddy AI Assistant"

## 五、内容呈现规范

### 5.1 代码展示

**公式与代码块**：
- 使用等宽字体
- 添加语法高亮（Prism.js）
- 背景色：`rgba(10, 13, 26, 0.5)`
- 内边距：`12px 16px`
- 圆角：`6px`

**行内代码**：
- 背景色：`rgba(92, 157, 255, 0.15)`
- 颜色：`#5c9dff`
- 内边距：`2px 6px`
- 圆角：`4px`

### 5.2 提示与说明

**信息提示**：
- 图标 + 文字组合
- 背景色根据类型变化（info/success/warning/danger）
- 使用毛玻璃效果

**工具提示**：
- 悬停时显示
- 位置：元素上方或右侧
- 样式：毛玻璃小卡片

## 六、禁止事项

### 严格禁止

❌ **布局相关**：
- 任何导致垂直滚动的设计
- 长条形内容布局
- 超过视口高度的内容堆叠
- 响应式断点导致的布局变化

❌ **视觉相关**：
- 纯色卡片背景（必须使用毛玻璃）
- 无阴影的扁平卡片
- 不透明边框
- 非品牌色系的颜色

❌ **交互相关**：
- 页面级滚动条
- 需要拖拽滚动条浏览内容
- 内容溢出无处理
- 无过渡的突兀切换

### 限制事项

⚠️ **谨慎使用**：
- 大段文字（建议配合可视化）
- 复杂表格（考虑图表化）
- 多层级嵌套菜单
- 第三方UI库组件

## 七、验收标准

### 视觉验收

✅ **毛玻璃效果检查**：
- 所有卡片均有半透明背景
- 模糊效果正常显示
- 层级透明度有差异
- 边框可见且半透明

✅ **阴影系统检查**：
- 每个卡片都有阴影
- 阴影颜色为蓝色系
- 阴影从底部投射
- 悬浮状态阴影加深

✅ **比例检查**：
- 在1920×1080下完美显示
- 在1366×768下无横向滚动
- 无垂直滚动条出现
- 内容完整可见

### 交互验收

✅ **导航检查**：
- 模块切换流畅
- 进度指示准确
- 键盘导航可用
- 无页面跳转

✅ **性能检查**：
- Canvas动画流畅
- 参数调节实时响应
- 无UI卡顿现象
- 内存泄漏检测

---

> **本规范是项目质量的基石，所有开发工作必须严格遵守。任何偏离需经项目负责人审批，并更新本文档。**
